[package]
name = "signrel"
version = "1.0.2"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
keywords = ["signedness", "signed", "unsigned", "integer"]
repository = "https://github.com/enarx/signrel"
description = "Trait expressing relationship between integers of different signedness"
documentation = "https://docs.rs/signrel"
license = "Apache-2.0"
readme = "README.md"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/signrel", workflow = "test" }
#github = { repository = "enarx/signrel", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/signrel" }
is-it-maintained-open-issues = { repository = "enarx/signrel" }
